--- a/conference-ticket-generator/src/index.css
+++ b/conference-ticket-generator/src/index.css
@@ -170,8 +170,18 @@ button:hover {
   width: 100%;
 }
 
+.bg-green {
+  background: var(--green);
+}
+
+.bg-trans {
+  background: transparent;
+}
+
 .render-container {
   width: 100%;
+  display: grid;
+  place-content: center;
 }
 
 .selection-wrapper {
@@ -239,13 +249,15 @@ button:hover {
   gap: 1rem;
 }
 
-.ticket-item {
+.tickets-list .ticket-item {
   border: 1px solid var(--green);
   border-radius: 12px;
   padding: 1rem;
+
   display: flex;
   flex-direction: column;
   justify-content: start;
+  text-align: left;
   gap: 0.5rem;
   cursor: pointer;
   background: transparent;
@@ -258,6 +270,10 @@ button:hover {
 .ticket-item::selection {
   background-color: var(--teal);
 }
+
+/* .ticket-item:focus {
+  background: var(--green);
+} */
 
 .ticket-item .ticket-price {
   font-size: 1.5rem;
@@ -374,15 +390,6 @@ textarea:focus-within {
 .img-uploader:hover .img-upload-overlay {
   z-index: 2;
   opacity: 0.7;
-}
-
-/* .img-uploader:hover svg {
-  position: relative;
-  z-index: 2;
-  opacity: 0.7;
-} */
-
-.img-uploader:hover img {
 }
 
 .inputs-container {
