--- a/conference-ticket-generator/src/index.css
+++ b/conference-ticket-generator/src/index.css
@@ -379,7 +379,7 @@ textarea:focus-within {
 
 .img-uploader img {
   width: 100%;
-  height: 100%;
+  aspect-ratio: 1;
   inset: 0;
   position: absolute;
   z-index: 1;
