bug: fix mobile ticket view

--- a/conference-ticket-generator/src/index.css
+++ b/conference-ticket-generator/src/index.css
@@ -725,11 +725,10 @@ TICKET */
 
   .ticket-container {
     margin-top: 1.5rem;
-    max-width: 300px;
+    /* max-width: 300px; */
     min-height: auto;
 
     padding: 1.5rem;
-    border: 1px solid saddlebrown;
   }
 
   .ticket-details-wrapper {
