--- a/conference-ticket-generator/src/index.css
+++ b/conference-ticket-generator/src/index.css
@@ -38,6 +38,7 @@ main {
   color: var(--white);
   background-repeat: no-repeat;
   height: 100%;
+  overflow-x: hidden;
 }
 
 main {
@@ -166,7 +167,7 @@ button:hover {
   background-color: var(--deepgreen);
   border-radius: 2.5rem;
   /* min-width: 80%; */
-  max-width: 700px;
+  max-width: 500px;
   width: 100%;
 }
 
