--- a/conference-ticket-generator/src/index.css
+++ b/conference-ticket-generator/src/index.css
@@ -751,7 +751,8 @@ TICKET */
 
   .ticket-details-wrapper {
     width: 100%;
-    min-height: 60%;
+    padding-bottom: 1.5rem;
+    /* min-height: 60%; */
   }
 
   .ticket-details-container {
